fixin overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -84,13 +84,10 @@ aside {
   background-color: #313131;
   width: 50%;
   padding: 1.5rem;
+  overflow: auto;
 }
 
 /* box shadows */
-
-.customize {
-  overflow: auto;
-}
 
 button {
   cursor: pointer;
